dom now gets populated by entries in db.json

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 class="submit"
             />
         </form>
-      </div>
+        <div id="tile-container"></div>
+    </div>
     <script type="text/javascript" src="src/index.js"></script>
   </body>
 </html>
